--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -17,9 +17,11 @@ $base-z-index: 0;
 
 // Colors
 $blue: #477dca;
-$dark-gray: #333;
-$medium-gray: #999;
-$light-gray: #ddd;
+
+$dark-gray: #424143;
+$gray: #67666A;
+$medium-gray: #807F83;
+$light-gray: #CBC9CF;
 
 // Font Colors
 $base-background-color: #fff;
