--- a/css/base/_grid-settings.scss
+++ b/css/base/_grid-settings.scss
@@ -7,8 +7,11 @@
 // $max-width: em(1088);
 
 // Neat Breakpoints
-$medium-screen: em(640);
-$large-screen: em(860);
+$tiny-screen: em(300);
+$small-screen: em(480);
+$medium-screen: em(760);
+$large-screen: em(960);
+$x-large-screen: em(1190);
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
