--- a/css/styles.css
+++ b/css/styles.css
@@ -698,6 +698,24 @@ picture {
 .text-center {
   text-align: center; }
 
+.hide-for-small {
+  display: none; }
+  @media screen and (min-width: 47.5em) {
+    .hide-for-small {
+      display: inline-block; } }
+
+.hide-for-medium {
+  display: none; }
+  @media screen and (min-width: 60em) {
+    .hide-for-medium {
+      display: inline-block; } }
+
+.hide-for-large {
+  display: none; }
+  @media screen and (min-width: 74.375em) {
+    .hide-for-large {
+      display: inline-block; } }
+
 .center-container {
   position: relative; }
   .center-container .absolute-center {
@@ -720,7 +738,8 @@ picture {
 
 aside.controls {
   background-color: transparent;
-  padding: 0; }
+  padding: 0;
+  overflow: hidden; }
   aside.controls .checkbox {
     float: left;
     display: block;
@@ -729,7 +748,8 @@ aside.controls {
     aside.controls .checkbox:last-child {
       margin-right: 0; }
     aside.controls .checkbox label {
-      display: inline-block; }
+      display: inline-block;
+      overflow: hidden; }
     aside.controls .checkbox .options label {
       float: left;
       display: block;
@@ -857,7 +877,7 @@ aside.controls {
     padding: 0 2%; }
     aside.controls .slider:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 53.75em) {
+    @media screen and (min-width: 60em) {
       aside.controls .slider {
         float: left;
         display: block;
@@ -933,7 +953,7 @@ aside.controls {
       word-spacing: 115px;
       white-space: nowrap;
       content: '1948 1951 1966 1989'; }
-    @media screen and (min-width: 53.75em) {
+    @media screen and (min-width: 60em) {
       aside.controls .slider.x {
         float: left;
         display: block;
@@ -1147,7 +1167,7 @@ header {
     padding: 2%; }
     header h1:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 53.75em) {
+    @media screen and (min-width: 60em) {
       header h1 {
         float: left;
         display: block;
@@ -1164,7 +1184,7 @@ header {
     padding: 2%; }
     header article:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 53.75em) {
+    @media screen and (min-width: 60em) {
       header article {
         float: left;
         display: block;
