--- a/css/styles.css
+++ b/css/styles.css
@@ -706,7 +706,7 @@ picture {
 
 .hide-for-medium {
   display: none; }
-  @media screen and (min-width: 60em) {
+  @media screen and (min-width: 62.5em) {
     .hide-for-medium {
       display: inline-block; } }
 
@@ -877,7 +877,7 @@ aside.controls {
     padding: 0 2%; }
     aside.controls .slider:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 60em) {
+    @media screen and (min-width: 62.5em) {
       aside.controls .slider {
         float: left;
         display: block;
@@ -953,7 +953,7 @@ aside.controls {
       word-spacing: 115px;
       white-space: nowrap;
       content: '1948 1951 1966 1989'; }
-    @media screen and (min-width: 60em) {
+    @media screen and (min-width: 62.5em) {
       aside.controls .slider.x {
         float: left;
         display: block;
@@ -1111,6 +1111,14 @@ section.map {
       width: 20%; }
       section.map > div:first-child:last-child {
         margin-right: 0; }
+      section.map > div:first-child:before {
+        content: "Info o bodu na mapě";
+        position: absolute;
+        line-height: 3;
+        left: 0.62em;
+        color: #807F83;
+        font-size: 0.62em;
+        text-transform: uppercase; }
     section.map > div:last-child {
       float: left;
       display: block;
@@ -1125,7 +1133,8 @@ section.map {
 html, body {
   max-width: 100%;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  min-width: 970px; }
   html::after, body::after {
     clear: both;
     content: "";
@@ -1167,7 +1176,7 @@ header {
     padding: 2%; }
     header h1:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 60em) {
+    @media screen and (min-width: 62.5em) {
       header h1 {
         float: left;
         display: block;
@@ -1184,7 +1193,7 @@ header {
     padding: 2%; }
     header article:last-child {
       margin-right: 0; }
-    @media screen and (min-width: 60em) {
+    @media screen and (min-width: 62.5em) {
       header article {
         float: left;
         display: block;
