Removed serif font

--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$base-font-family: "karmina", $helvetica;
+$base-font-family: "karmina-sans", $helvetica;
 $heading-font-family: "karmina-sans", $helvetica;
 
 // Font Sizes
