--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -22,6 +22,7 @@ $dark-gray: #424143;
 $gray: #67666A;
 $medium-gray: #807F83;
 $light-gray: #CBC9CF;
+$super-light-gray: #fafafa;
 
 // Font Colors
 $base-background-color: #fff;
