--- a/css/layout/_controls.scss
+++ b/css/layout/_controls.scss
@@ -1,14 +1,12 @@
-aside.controls {
+.controls {
+	position: fixed;
+	top: $base-line-height * 1em;
+	left: 0;
+	z-index: 13;
+	width: 100%;
 	background-color: transparent;
 	padding: 0;
 	overflow: hidden;
-
-	// h4 {
-	// 	padding-top: $heading-line-height * 1em;
-	// 	padding-left: $heading-line-height * 1em;
-	// 	padding-bottom: $heading-line-height * 1em;
-	// 	margin-bottom: 0;
-	// }
 
 	.checkbox {
 		@include span-columns(12);
@@ -30,7 +28,7 @@ aside.controls {
 
 			label {
 				@include span-columns(1 of 5);
-				line-height: 5;
+				line-height: $base-line-height * 4;
 				cursor: pointer;
 				margin-bottom: 0;
 
@@ -90,7 +88,7 @@ aside.controls {
 				@include transition;
 				border: none;
 				cursor: pointer;
-				display: inline-block;
+				display: none; // inline-block
 				outline: none;
 				position: relative;
 				z-index: 1000;
@@ -107,109 +105,91 @@ aside.controls {
 
 	}
 
-	.slider {
-		@include span-columns(12);
-		@include pad(0 2%);
+}
 
-		@include media($large-screen) {
-			@include span-columns(6);
+.filter {
+	position: fixed;
+	top: $base-line-height * 4em + $base-line-height * 1em;
+	left: 0;
+	z-index: 13;
+	width: 20%;
+	text-align: center;
+	box-sizing: content-box;
+	padding: $base-line-height * 1em 0;
+	height: $base-line-height * 1.2em; // 1.8em
+	@include border-bottom-radius(2px);
+	border-top: 1px solid $medium-gray;
+	cursor: pointer;
+	color: $dark-gray;
+	background-color: $super-light-gray;
+
+	@include transition-property(all);
+	@include transition-duration(0.2s);
+	@include transition-timing-function(ease-in-out);
+
+	&:after {
+		opacity: 0;
+		@include transition-property(opacity);
+		@include transition-duration(0.2s);
+		@include transition-timing-function(ease-in-out);
+
+		top: 100%;
+		left: 50%;
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		border-radius: 2px;
+		position: absolute;
+		pointer-events: none;
+		border-color: rgba(255, 255, 255, 0);
+		border-top-color: $super-light-gray;
+		border-width: $base-line-height * 1em;
+		margin-left: $base-line-height * -1em;
+	}
+
+	.active-filter & {
+		height: calc(80% - #{$base-line-height} * 4em + #{$base-line-height} * 1em);
+		overflow-y: hidden;
+	}
+
+	&.hidden {
+
+		&:hover {
+			// height: $base-line-height * 2em;
+			padding: $base-line-height * 1.5em 0;
 		}
 
-		.years {
-			> div {
-				@include span-columns(1 of 2);
-				line-height: 2;
-			}
-		}
-
-		// Range slider
-		// Slider
-		input.range {
-			-webkit-appearance: none;
-			height: 10px;
-			border-radius: 5px;
-			background: $light-blue;
-			outline: none;
-			width: 100%;
-			margin: 1em 0;
-			cursor: ew-resize;
-
-			&::-moz-range-track {
-				background: none;
-				border: none;
-			}
-
-			// Slider Handle
-			&::-webkit-slider-thumb {
-				-webkit-appearance: none;
-				@include size($option-size);
-				border-radius: 50%;
-				background: #353535;
-				cursor: pointer;
-				-webkit-transition: background .15s ease-in-out;
-				transition: background .15s ease-in-out;
-
-				&:hover {
-					background: $light-red;
-				}
-			}
-
-			&:active::-webkit-slider-thumb {
-				background: $light-red;
-			}
-
-			&::-moz-range-thumb {
-				@include size($option-size);
-				border: 0;
-				border-radius: 50%;
-				background: #353535;
-				cursor: pointer;
-				-webkit-transition: background .15s ease-in-out;
-				transition: background .15s ease-in-out;
-
-				&:hover {
-					background: $light-red;
-				}
-			}
-
-			&:active::-moz-range-thumb {
-				background: $light-red;
-			}
+		&:after {
+			opacity: 1;
 		}
 	}
 
-	.slider.x {
-		@include span-columns(12);
-		@include pad(0 2%);
+	> span {
 		position: relative;
-		min-height: 80px;
-
-		label:before {
-			@include position(absolute, null null 0px 0);
-			-webkit-background-clip: text;
-			font-weight: 600;
-			font-size: 0.875rem / 2;
-			line-height: 2;
-			text-indent: 0.5em;
-			word-spacing: 115px;
-			white-space: nowrap;
-			content: '1948 1951 1966 1989';
-		}
-
-		@include media($large-screen) {
-			@include span-columns(4);
-			@include shift(4);
-			@include pad(0);
-
-			label:before {
-				margin-left: -1em;
-				word-spacing: 120px;
-			}
-		}
-
-		input[type='range'] {
-			width: 457px;
-		}
+		color: $medium-gray;
+		font-size: 0.62em;
+		text-transform: uppercase;
+		line-height: $base-line-height;
+		font-weight: 600;
 	}
 
+	dl {
+		display: none;
+	}
+
+	h3 {
+		display: inline-block;
+		opacity: 0.235;
+		margin-top: 230px;
+	}
+
+	.active-marker & {
+		dl {
+			display: block;
+		}
+		h3 {
+			display: none;
+		}
+	}
 }
